<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:power="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_bkg" >

    <com.batterydoctor.superfastcharger.fastcharger.ui.MainTitle
        android:id="@+id/optimize_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        power:title_text="@string/app_name" >
    </com.batterydoctor.superfastcharger.fastcharger.ui.MainTitle>

    <RelativeLayout
        android:layout_below="@id/optimize_title"
        android:id="@+id/optimize_root"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/mode_list_item_bkg"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/optimize_using_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/optimize_using_root_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/home_optimize_button_color"
            android:text="@string/optimize_using_supper_user" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/history_bg"
        android:layout_above="@+id/optimize_button"
        android:layout_below="@id/optimize_root"
        android:padding="10dp" >

        <RelativeLayout
            android:id="@id/statusitems"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mode_list_item_bkg"
            android:padding="10dp" >

            <TextView
                android:id="@+id/optimize_running_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/home_optimize_button_color"
                android:text="@string/optimize_running_apps" />
            <TextView
                android:id="@+id/optimize_ram_info"
                android:layout_below="@id/optimize_running_number"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/home_optimize_button_color"
                android:text="@string/optimize_ram_info" />
            <TextView
                android:id="@+id/optimize_ram_info_values"
                android:layout_alignBottom="@id/optimize_ram_info"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:textSize="@dimen/main_title_text_size"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <ListView
            android:id="@id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom_button_area"
            android:divider="@android:color/transparent"
            android:dividerHeight="3dp"
            android:layout_below="@id/statusitems"
            android:padding="5dp" >
        </ListView>

        <ProgressBar
            android:id="@id/progress"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/processloader" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/optimize_clear_apps"
            android:visibility="gone" />

    </RelativeLayout>

    <Button
        android:id="@+id/optimize_button"
        android:layout_width="@dimen/home_optimize_button_width"
        android:layout_height="@dimen/home_optimize_button_height"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/battery_info_remaining_time_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/home_battery_remain_time_value_button_margin"
        android:background="@drawable/power_analysis_button"
        android:gravity="center"
        android:text="@string/power_consumption_analysis"
        android:textColor="@color/home_optimize_button_color"
        android:textSize="@dimen/home_onekey_button_text"
        android:textStyle="bold" />

</RelativeLayout>