<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/common_dialog_blank_area"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@id/common_dialog_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@id/title"
            style="@style/dialog_title" />

        <LinearLayout
            android:id="@id/common_bkg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fragment_bkg"
            android:orientation="vertical" >

            <ScrollView
                android:id="@id/dialog_body_padding_left_right"
                style="@style/dialog_content_style"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:minHeight="@dimen/dialog_min_height" >

                <LinearLayout
                    android:id="@id/dialog_body"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/dialog_min_height"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@id/message"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="@dimen/dialog_list_text_size"
                        android:textColor="@color/local_white"></TextView>
                </LinearLayout>
            </ScrollView>

            <ProgressBar
                android:id="@id/progress_bar"
                android:layout_width="fill_parent"
                android:layout_height="15.0dip"
                android:layout_marginBottom="12.0dip"
                android:layout_marginLeft="12.0dip"
                android:layout_marginRight="12.0dip"
                android:indeterminateOnly="false"
                android:progressDrawable="@drawable/progress_bar"
                android:visibility="gone" />

            <CheckBox
                android:id="@id/never_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_dialog_never_display"
                android:textColor="@color/local_white"
                android:visibility="gone" />

            <LinearLayout
                android:id="@id/button_panel"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dialog_button_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingBottom="@dimen/dialog_button_margin_bottom"
                android:paddingLeft="@dimen/dialog_button_margin_left_right"
                android:paddingRight="@dimen/dialog_button_margin_left_right" >

                <Button
                    android:id="@id/left_btn"
                    android:textSize="@dimen/dialog_button_text_size"
                    android:textColor="@color/btn_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dialog_buttons_margin"
                    android:layout_weight="1.0"
                    android:background="@drawable/power_analysis_button"
                    android:singleLine="true"
                    android:text="@string/dialog_ok" />

                <Button
                    android:id="@id/right_btn"
                    android:textSize="@dimen/dialog_button_text_size"
                    android:textColor="@color/btn_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dialog_buttons_margin"
                    android:layout_weight="1.0"
                    android:background="@drawable/power_analysis_button"
                    android:singleLine="true"
                    android:text="@string/dialog_cancel" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>